--- a/index.html
+++ b/index.html
@@ -62,6 +62,33 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             });
         });
     </script>
+    item_id: "ITM_12345",
+
+      item_name: "Python",
+
+      affiliation: "online_Course",
+
+     currency: "INR",
+
+      discount: 100,
+
+      item_brand: "MOOC",
+
+      item_category: "Python",
+
+      item_category2: "ML",
+
+      item_category3: "DS",
+
+      item_category4: "CS",
+
+      item_variant: "Online",
+
+      location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo",
+
+      price: 5000,
+
+      quantity: 1
 
     <title>Home Page</title>
 </head>
